style/app.css
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');

@tailwind base;

@tailwind components;

@tailwind utilities;

.card{
    @apply bg-white shadow flex flex-col text-center items-center justify-center sm:w-20 w-full py-5 px-12;
}

.stripes-bg{
    @apply absolute;
    background-image: url('../assets/img/stripes.svg');
}

